# FlyQ

./: .gitignore  Cargo.toml  README.md  flyq.toml.example
flyq-client/: Cargo.toml
flyq-client/examples/: monitor.rs
flyq-client/src/: client.rs  lib.rs  main.rs
flyq-protocol/: Cargo.toml
flyq-protocol/src/: error.rs  errors.rs  frame.rs  lib.rs  message.rs  op_code.rs  payload.rs  utils.rs
flyq-protocol/src/request/: commit_offset.rs  consume.rs  consume_with_group.rs  consumer_lag.rs  mod.rs  partition_health.rs  produce.rs  watermark.rs
flyq-protocol/src/response/: consume_response.rs  consumer_lag_response.rs  mod.rs  partition_health_response.rs  produce_ack.rs  watermark_response.rs
flyq-server/: Cargo.toml
flyq-server/src/: config.rs  lib.rs  main.rs  types.rs
flyq-server/src/core/: constants.rs  error.rs  log_engine.rs  mod.rs  offset_tracker.rs  partition.rs  partition_state.rs  partiton_meta.rs  segment.rs  storage.rs  stored_record.rs  topic.rs
flyq-server/src/runtime/: flush.rs  mod.rs
flyq-server/src/server/: config.rs  listener.rs  mod.rs  params.rs
flyq-server/tests/: engine.rs  offset_tracker.rs  retention.rs  watermark_apis.rs
flyq-server/tests/common/: mod.rs
src/: main.rs
src/core/: constants.rs  error.rs  log_engine.rs  message.rs  mod.rs  offset_tracker.rs  partition.rs  segment.rs  storage.rs  topic.rs  utils.rs
tests/: engine.rs  offset_tracker.rs
tests/common/: mod.rs
