[package]
name = "flyQ"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
